care/force-app/main/default/objects/Entitlement_and_Milestone_Activity_Types__mdt/Entitlement_and_Milestone_Activity_Types__mdt.object-meta.xml
<CustomObject>
    <description>Includes the activity types that should be included for auto closing first milestone upon activity being created and completed</description>
    <label>Entitlement and Milestone Activity Types</label>
    <pluralLabel>Entitlement and Milestone Activity Types</pluralLabel>
</CustomObject>