care/force-app/main/default/objects/Entitlement_and_Milestone_Activity_Types__mdt/fields/Activity_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type_Value__c</fullName>
    <label>Activity Type Value</label>
    <type>TextArea</type>
</CustomField>