care/force-app/main/default/objects/Entitlement_and_Milestone_Activity_Types__mdt/fields/Close_First_Response__c.field-meta.xml
<CustomField>
    <fullName>Close_First_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close First Response</label>
    <type>Checkbox</type>
</CustomField>