care/force-app/main/default/objects/Entitlement_and_Milestone_Activity_Types__mdt/fields/Close_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Close_Response_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Close Response Time</label>
    <type>Checkbox</type>
</CustomField>