care/force-app/main/default/objects/Entitlement_and_Milestone_Activity_Types__mdt/fields/Is_Completed_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Completed_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Completed Required</label>
    <type>Checkbox</type>
</CustomField>