care/force-app/main/default/objects/Entitlement_and_Milestone_Activity_Types__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>TextArea</type>
</CustomField>